[gd_scene format=3 uid="uid://d2ahs8hoi2mp"]

[ext_resource type="Script" uid="uid://biu73pw30dmb3" path="res://scripts/dialogue_template.gd" id="1_k51di"]
[ext_resource type="PackedScene" uid="uid://bv42g323prh5f" path="res://addons/YarnSpinner-Godot/Scenes/DefaultDialogueSystem.tscn" id="1_l8mj7"]
[ext_resource type="Resource" uid="uid://c44yclr6fs0fj" path="res://resources/dialogue/chapter1.yarnproject" id="2_k51di"]
[ext_resource type="Texture2D" uid="uid://cblm66l2385ri" path="res://assets/Dialogue Box.png" id="3_667qt"]
[ext_resource type="Theme" uid="uid://dthhuuah0qhsg" path="res://themes/default_interact_theme.tres" id="4_ofqme"]
[ext_resource type="PackedScene" uid="uid://d0lemcnjah10o" path="res://scenes/default_option_view.tscn" id="6_667qt"]

[node name="DialogueTemplate" type="Control" unique_id=1852626907]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_k51di")

[node name="YarnSpinnerCanvasLayer" parent="." unique_id=1774932670 instance=ExtResource("1_l8mj7")]

[node name="TextureRect" type="TextureRect" parent="YarnSpinnerCanvasLayer" unique_id=933040991]
offset_right = 480.0
offset_bottom = 270.0
texture = ExtResource("3_667qt")

[node name="DialogueRunner" parent="YarnSpinnerCanvasLayer" index="1"]
yarnProject = ExtResource("2_k51di")
autoStart = true
startNode = "chapter1_houseIntro"

[node name="VariableDebugText" parent="YarnSpinnerCanvasLayer" index="2"]
mouse_filter = 1

[node name="LinePresenter" parent="YarnSpinnerCanvasLayer" index="3"]
mouse_filter = 1

[node name="PresenterControl" parent="YarnSpinnerCanvasLayer/LinePresenter" index="0"]
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="LineText" parent="YarnSpinnerCanvasLayer/LinePresenter/PresenterControl" index="0"]
offset_left = -172.0
offset_top = 64.0
offset_right = 174.0
offset_bottom = 112.0
mouse_filter = 1
theme = ExtResource("4_ofqme")
theme_type_variation = &"InteractRichTextLabel"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16

[node name="ColorRect" parent="YarnSpinnerCanvasLayer/LinePresenter/PresenterControl/LineText" index="2"]
visible = false
offset_left = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="CharacterNameText" parent="YarnSpinnerCanvasLayer/LinePresenter/PresenterControl" index="1"]
offset_left = -164.0
offset_top = 35.0
offset_right = -82.0
offset_bottom = 49.0
mouse_filter = 1
theme = ExtResource("4_ofqme")
theme_type_variation = &"InteractRichTextLabel"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16

[node name="ColorRect" parent="YarnSpinnerCanvasLayer/LinePresenter/PresenterControl/CharacterNameText" index="2"]
visible = false
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" parent="YarnSpinnerCanvasLayer/LinePresenter/PresenterControl" index="2"]
visible = false
offset_left = 45.0
offset_top = -76.0
offset_right = 231.00003
offset_bottom = -17.0
mouse_filter = 1

[node name="LinePresenterButtonHandler" parent="YarnSpinnerCanvasLayer/LinePresenter" index="1"]
mouse_filter = 1

[node name="OptionsPresenter" parent="YarnSpinnerCanvasLayer" index="4" node_paths=PackedStringArray("lastLineText", "lastLineContainer", "lastLineCharacterNameText")]
mouse_filter = 1
optionItemPrefab = ExtResource("6_667qt")
showsLastLine = true
lastLineText = NodePath("PresenterControl/LastLineText")
lastLineContainer = NodePath("PresenterControl/LastLineText")
lastLineCharacterNameText = NodePath("PresenterControl/LastLineCharacterNameText")

[node name="PresenterControl" parent="YarnSpinnerCanvasLayer/OptionsPresenter" index="0"]
mouse_filter = 1

[node name="VBoxContainer" parent="YarnSpinnerCanvasLayer/OptionsPresenter/PresenterControl" index="0"]
offset_left = 14.0
offset_top = -73.0
offset_right = 209.0
offset_bottom = 49.0
theme = ExtResource("4_ofqme")
theme_type_variation = &"InteractVBoxContainer"
alignment = 2

[node name="LastLineText" parent="YarnSpinnerCanvasLayer/OptionsPresenter/PresenterControl" index="1"]
offset_left = -172.0
offset_top = 199.0
offset_right = 174.0
offset_bottom = 247.0
theme = ExtResource("4_ofqme")
theme_type_variation = &"InteractRichTextLabel"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16

[node name="ColorRect" parent="YarnSpinnerCanvasLayer/OptionsPresenter/PresenterControl/LastLineText" index="2"]
visible = false

[node name="LastLineCharacterNameText" parent="YarnSpinnerCanvasLayer/OptionsPresenter/PresenterControl" index="2"]
offset_left = -164.0
offset_top = 35.0
offset_right = -81.0
offset_bottom = 49.0
theme = ExtResource("4_ofqme")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16

[node name="ColorRect" parent="YarnSpinnerCanvasLayer/OptionsPresenter/PresenterControl/LastLineCharacterNameText" index="2"]
visible = false
layout_mode = 1
anchors_preset = 15
offset_right = 3.0517578e-05
grow_horizontal = 2
grow_vertical = 2

[editable path="YarnSpinnerCanvasLayer"]
